--- a/index.html
+++ b/index.html
@@ -132,16 +132,17 @@
                     <i class="fas fa-star blue"></i>
                 </div>
             </div>
+            <button>Afficher plus</button>
         </div>
-        <button>Afficher plus</button>
         <div class="populaires">
-            <h3>Les plus populaires</h3>
+            <h3 class="title">
+            Les plus populaires
+            <i class="fas fa-chart-line"></i>
+            </h3>
             <div class="box-content">
-                <div class="image">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                </div>
+                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                 <div class="details">
-                    <h4>Hôtel Le solei du matin</h4>
+                    <h4>Hôtel Le soleil du matin</h4>
                     <p>Nuit à partir de 128€</p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
@@ -153,9 +154,7 @@
                 </div>
             </div>
             <div class="box-content">
-                <div class="image">
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
-                </div>
+                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
                 <div class="details">
                     <h4>Au coeur de l'eau Chambres d'hôtes</h4>
                     <p>Nuit à partir de 71€</p>
@@ -169,9 +168,7 @@
                 </div>
             </div>
             <div class="box-content">
-                <div class="image">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
-                </div>
+                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                 <div class="details">
                     <h4>Hôtel Tout bleu et blanc</h4>
                     <p>Nuit à partir de 68€</p>
@@ -193,42 +190,57 @@
                 <div>
                     <img src="">
                 </div>
-                <h3 class="name">Vieux Port</h3>
+                <h4 class="name">Vieux Port</h4>
             </div>
             <div class="activitesbox" id="activitesbox2">
                 <div>
                     <img src="">
                 </div>
-                <h3 class="name">Fort de Pomègues</h3>
+                <h4 class="name">Fort de Pomègues</h4>
             </div>
             <div class="activitesbox" id="activitesbox3">
                 <div>
                     <img src="">
                 </div>
-                <h3 class="name">Parc National des Calanques</h3>
+                <h4 class="name">Parc National des Calanques</h4>
             </div>
             <div class="activitesbox" id="activitesbox4">
                 <div>
                     <img src="">
                 </div>
-                <h3 class="name">Notre-Dame-de-la-Garde</h3>
+                <h4 class="name">Notre-Dame-de-la-Garde</h4>
             </div>
             <div class="activitesbox" id="activitesbox5">
                 <div>
                     <img src="">
                 </div>
-                <h3 class="name">Ile du Frioul</h3>
+                <h4 class="name">Ile du Frioul</h4>
             </div>
             <div class="activitesbox" id="activitesbox6">
                 <div>
                     <img src="">
                 </div>
-                <h3 class="name">Parc Longchamp</h3>
+                <h4 class="name">Parc Longchamp</h4>
             </div>
         </div>
     </section>
     <footer>
-
+        <div id="info">
+            <h4>A propos</h4>
+            <a href="#">Fonctionnement du site</a>
+            <a href="#">Conditions générales de vente</a>
+            <a href="#">Données et confidentialités</a>
+        </div>
+        <div id="hebergements">
+            <h4>Nos hébergements</h4>
+            <a href="#">Charte qualité</a>
+            <a href="#">Soumettre votre hôtel</a>
+        </div>
+        <div id="assist">
+            <h4>Assistance</h4>
+            <a href="#">Centre d'aide</a>
+            <a href="#">Nous contacter</a>
+        </div>
     </footer>
 </body>
 
