--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/60b308914c.js" crossorigin="anonymous"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -136,8 +135,8 @@
         </div>
         <div class="populaires">
             <h3 class="title">
-            Les plus populaires
-            <i class="fas fa-chart-line"></i>
+                Les plus populaires
+                <i class="fas fa-chart-line"></i>
             </h3>
             <div class="box-content">
                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
@@ -186,58 +185,50 @@
     <section>
         <h3>Activités à Marseille</h3>
         <div class="activites">
-            <div class="activitesbox" id="activitesbox1">
-                <div>
+            <figure class="activitesbox" id="activitesbox1">
+                <img src="">
+                <figcaption class="name">Vieux Port</figcaption>
+            </figure>
+            <div>
+                <figure class="activitesbox" id="activitesbox2">
                     <img src="">
-                </div>
-                <h4 class="name">Vieux Port</h4>
+                    <figcaption class="name">Fort de Pomègues</figcaption>
+                </figure>
+                <figure class="activitesbox" id="activitesbox3">
+                    <img src="">
+                    <figcaption class="name">Iles du Frioul</figcaption>
+                </figure>
             </div>
-            <div class="activitesbox" id="activitesbox2">
-                <div>
+            <figure class="activitesbox" id="activitesbox4">
+                <img src="">
+                <figcaption class="name">Parc National des Calanques</figcaption>
+            </figure>
+            <div>
+                <figure class="activitesbox" id="activitesbox5">
                     <img src="">
-                </div>
-                <h4 class="name">Fort de Pomègues</h4>
-            </div>
-            <div class="activitesbox" id="activitesbox3">
-                <div>
+                    <figcaption class="name">Notre-Dame-de-la-Garde</figcaption>
+                </figure>
+                <figure class="activitesbox" id="activitesbox6">
                     <img src="">
-                </div>
-                <h4 class="name">Parc National des Calanques</h4>
-            </div>
-            <div class="activitesbox" id="activitesbox4">
-                <div>
-                    <img src="">
-                </div>
-                <h4 class="name">Notre-Dame-de-la-Garde</h4>
-            </div>
-            <div class="activitesbox" id="activitesbox5">
-                <div>
-                    <img src="">
-                </div>
-                <h4 class="name">Ile du Frioul</h4>
-            </div>
-            <div class="activitesbox" id="activitesbox6">
-                <div>
-                    <img src="">
-                </div>
-                <h4 class="name">Parc Longchamp</h4>
+                    <figcaption class="name">Parc Longchamp</figcaption>
+                </figure>
             </div>
         </div>
     </section>
     <footer>
         <div id="info">
-            <h4>A propos</h4>
+            <h5>A propos</h5>
             <a href="#">Fonctionnement du site</a>
             <a href="#">Conditions générales de vente</a>
             <a href="#">Données et confidentialités</a>
         </div>
         <div id="hebergements">
-            <h4>Nos hébergements</h4>
+            <h5>Nos hébergements</h5>
             <a href="#">Charte qualité</a>
             <a href="#">Soumettre votre hôtel</a>
         </div>
         <div id="assist">
-            <h4>Assistance</h4>
+            <h5>Assistance</h5>
             <a href="#">Centre d'aide</a>
             <a href="#">Nous contacter</a>
         </div>
