modif accessibilité: lang fr, buttons type, remplacement div box par liens, description alt images activités

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -30,7 +30,7 @@
                 <i class="fas fa-map-marker-alt"></i>
             </span>
             <input type="search" placeholder="Marseille, France">
-            <button>
+            <button type="button">
                 Rechercher
             </button>
         </div>
@@ -59,7 +59,7 @@
     <div class="content">
         <div class="hebergements">
             <h3>Hébergements à Marseille</h3>
-            <div class="box-content">
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                 <h4>Auberge la Cannebière</h4>
                 <p>Nuit à partir de <span>25€</span></p>
@@ -70,8 +70,8 @@
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star grey"></i>
                 </div>
-            </div>
-            <div class="box-content">
+            </a>
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                 <h4>Hôtel du port</h4>
                 <p>Nuit à partir de 52€</p>
@@ -82,8 +82,8 @@
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star blue"></i>
                 </div>
-            </div>
-            <div class="box-content">
+            </a>
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                 <h4>Hôtel les mouettes</h4>
                 <p>Nuit à partir de 76€</p>
@@ -94,8 +94,8 @@
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star grey"></i>
                 </div>
-            </div>
-            <div class="box-content">
+            </a>
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                 <h4>Hôtel de la mer</h4>
                 <p>Nuit à partir de 46€</p>
@@ -106,8 +106,8 @@
                     <i class="fas fa-star grey"></i>
                     <i class="fas fa-star grey"></i>
                 </div>
-            </div>
-            <div class="box-content">
+            </a>
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                 <h4>Auberge Le Panier</h4>
                 <p>Nuit à partir de 23€</p>
@@ -118,8 +118,8 @@
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star grey"></i>
                 </div>
-            </div>
-            <div class="box-content">
+            </a>
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                 <h4>Hôtel chez Amina</h4>
                 <p>Nuit à partir de 96€</p>
@@ -130,15 +130,15 @@
                     <i class="fas fa-star blue"></i>
                     <i class="fas fa-star blue"></i>
                 </div>
-            </div>
-            <button>Afficher plus</button>
+            </a>
+            <button type="button">Afficher plus</button>
         </div>
         <div class="populaires">
             <h3 class="title">
                 Les plus populaires
                 <i class="fas fa-chart-line"></i>
             </h3>
-            <div class="box-content">
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                 <div class="details">
                     <h4>Hôtel Le soleil du matin</h4>
@@ -151,8 +151,8 @@
                         <i class="fas fa-star blue"></i>
                     </div>
                 </div>
-            </div>
-            <div class="box-content">
+            </a>
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
                 <div class="details">
                     <h4>Au coeur de l'eau Chambres d'hôtes</h4>
@@ -165,8 +165,8 @@
                         <i class="fas fa-star grey"></i>
                     </div>
                 </div>
-            </div>
-            <div class="box-content">
+            </a>
+            <a href="#" class="box-content">
                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                 <div class="details">
                     <h4>Hôtel Tout bleu et blanc</h4>
@@ -186,30 +186,30 @@
         <h3>Activités à Marseille</h3>
         <div class="activites">
             <figure class="activitesbox" id="activitesbox1">
-                <img src="">
+                <img src="" alt=" le Vieux-Port de Marseille est l’un des symboles de la ville, situé en bas de la fameuse Canebière. Rassemblements, grands événements, feu d’artifice, il est le point de repère des Marseillais ! Prendre un selfie sous l’Ombrière, se balader le long du quai et observer les pêcheurs qui partent en mer, découvrir le magnifique patrimoine entourant le Vieux-Port, faire une mini-croisière sur le Ferry Boat… Les activités ne manquent pas dans ce lieu incontournable ! Pour les plus gourmands ne ratez pas le marché aux poissons tous les matins, et si vous êtes plutôt d’humeur florale il y a même le marché aux fleurs le mardi et samedi matin.">
                 <figcaption class="name">Vieux Port</figcaption>
             </figure>
             <div>
                 <figure class="activitesbox" id="activitesbox2">
-                    <img src="">
+                    <img src="" alt="Erigé à la fin 19ème siècle le Fort de Pomègues domine le nord de l’île de Pomègues, à 87 mètres d’altitude. Il s’agit du point culminant de l’archipel du Frioul.">
                     <figcaption class="name">Fort de Pomègues</figcaption>
                 </figure>
                 <figure class="activitesbox" id="activitesbox3">
-                    <img src="">
+                    <img src="" alt="Optez pour une balade en bateau sur les îles du Frioul ou du château d’If : l’occasion de découvrir la faune et la flore locale, mais également un bout d’Histoire de la ville, perché sur un rocher. Pour une visite de Marseille qui ne s’arrête pas qu’au Vieux Port ou au Mucem, prenez le large pour un réel moment d’évasion qui vous permettra de goûter à l’eau cristalline, d’apprécier les fonds marins, mais également d’explorer les nombreux vestiges présents dans cet archipel">
                     <figcaption class="name">Iles du Frioul</figcaption>
                 </figure>
             </div>
             <figure class="activitesbox" id="activitesbox4">
-                <img src="">
+                <img src="" alt="Le massif des Calanques est une merveille de la nature nichée entre Marseille et Cassis. Ce paysage exceptionnel et unique est un incontournable à Marseille ! En effet, entre plages de galets et de sable fin, petites criques et eau turquoise, cet écrin de biodiversité a tout d’une carte postale ! C’est l’endroit parfait pour prendre le soleil, explorer les fonds marins, ou encore s’adonner à quelques activités nautiques comme le kayak.">
                 <figcaption class="name">Parc National des Calanques</figcaption>
             </figure>
             <div>
                 <figure class="activitesbox" id="activitesbox5">
-                    <img src="">
+                    <img src="" alt="Figure emblématique de la Ville de Marseille, elle veille sur les marins, les pêcheurs et tous les Marseillais. Lors de votre séjour dans la cité phocéenne, allez rendre visite à la « Bonne Mère » comme on la surnomme à Marseille, et admirez du haut de la colline, le panorama qui s’offre à vous. En effet, elle est visible des quatre coins de la ville et fait face à la mer Méditerranée de toute sa grandeur.">
                     <figcaption class="name">Notre-Dame-de-la-Garde</figcaption>
                 </figure>
                 <figure class="activitesbox" id="activitesbox6">
-                    <img src="">
+                    <img src="" alt="L’un des trop rares espace vert du centre-ville, mais ce parc majestueux situé en plein cœur de Marseille ne laisse personne indifférent. Huit d’hectares d’espaces verts, des musées, une architecture somptueuse, le Palais Longchamp ne manque pas d’attrait, ni de charme. C’est d’ailleurs l’un des plus beaux monuments de Marseille.">
                     <figcaption class="name">Parc Longchamp</figcaption>
                 </figure>
             </div>
