commencement activités box 1

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
         <h3>Activités à Marseille</h3>
         <div class="activites">
             <figure class="activitesbox" id="activitesbox1">
-                <img src="" alt=" le Vieux-Port de Marseille est l’un des symboles de la ville, situé en bas de la fameuse Canebière. Rassemblements, grands événements, feu d’artifice, il est le point de repère des Marseillais ! Prendre un selfie sous l’Ombrière, se balader le long du quai et observer les pêcheurs qui partent en mer, découvrir le magnifique patrimoine entourant le Vieux-Port, faire une mini-croisière sur le Ferry Boat… Les activités ne manquent pas dans ce lieu incontournable ! Pour les plus gourmands ne ratez pas le marché aux poissons tous les matins, et si vous êtes plutôt d’humeur florale il y a même le marché aux fleurs le mardi et samedi matin.">
+                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=" le Vieux-Port de Marseille est l’un des symboles de la ville, situé en bas de la fameuse Canebière. Rassemblements, grands événements, feu d’artifice, il est le point de repère des Marseillais ! Prendre un selfie sous l’Ombrière, se balader le long du quai et observer les pêcheurs qui partent en mer, découvrir le magnifique patrimoine entourant le Vieux-Port, faire une mini-croisière sur le Ferry Boat… Les activités ne manquent pas dans ce lieu incontournable ! Pour les plus gourmands ne ratez pas le marché aux poissons tous les matins, et si vous êtes plutôt d’humeur florale il y a même le marché aux fleurs le mardi et samedi matin.">
                 <figcaption class="name">Vieux Port</figcaption>
             </figure>
-            <div>
+            <div id="activitescolumn2">
                 <figure class="activitesbox" id="activitesbox2">
                     <img src="" alt="Erigé à la fin 19ème siècle le Fort de Pomègues domine le nord de l’île de Pomègues, à 87 mètres d’altitude. Il s’agit du point culminant de l’archipel du Frioul.">
                     <figcaption class="name">Fort de Pomègues</figcaption>
