--- a/index.html
+++ b/index.html
@@ -188,21 +188,21 @@
         <h3>Activités à Marseille</h3>
         <div class="activites">
             <figure class="activitesbox" id="activitesbox1">
-                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt=" le Vieux-Port de Marseille est l’un des symboles de la ville, situé en bas de la fameuse Canebière. Rassemblements, grands événements, feu d’artifice, il est le point de repère des Marseillais ! Prendre un selfie sous l’Ombrière, se balader le long du quai et observer les pêcheurs qui partent en mer, découvrir le magnifique patrimoine entourant le Vieux-Port, faire une mini-croisière sur le Ferry Boat… Les activités ne manquent pas dans ce lieu incontournable ! Pour les plus gourmands ne ratez pas le marché aux poissons tous les matins, et si vous êtes plutôt d’humeur florale il y a même le marché aux fleurs le mardi et samedi matin.">
+                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateau avec un ville en arrière plan">
                 <figcaption class="name">Vieux Port</figcaption>
             </figure>
             <div id="activitescolumn2">
                 <figure class="activitesbox" id="activitesbox2">
-                    <img src="" alt="Erigé à la fin 19ème siècle le Fort de Pomègues domine le nord de l’île de Pomègues, à 87 mètres d’altitude. Il s’agit du point culminant de l’archipel du Frioul.">
+                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="une pente rocheuse beige avec un fort beige au sommet">
                     <figcaption class="name">Fort de Pomègues</figcaption>
                 </figure>
                 <figure class="activitesbox" id="activitesbox3">
-                    <img src="" alt="Optez pour une balade en bateau sur les îles du Frioul ou du château d’If : l’occasion de découvrir la faune et la flore locale, mais également un bout d’Histoire de la ville, perché sur un rocher. Pour une visite de Marseille qui ne s’arrête pas qu’au Vieux Port ou au Mucem, prenez le large pour un réel moment d’évasion qui vous permettra de goûter à l’eau cristalline, d’apprécier les fonds marins, mais également d’explorer les nombreux vestiges présents dans cet archipel">
+                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="paysage maritime avec au premier plan, une longue vue, au second plan la mer et une longue digue orange, ainsi qu'une ile rocailleuse en arrière plan">
                     <figcaption class="name">Iles du Frioul</figcaption>
                 </figure>
             </div>
             <figure class="activitesbox" id="activitesbox4">
-                <img src="" alt="Le massif des Calanques est une merveille de la nature nichée entre Marseille et Cassis. Ce paysage exceptionnel et unique est un incontournable à Marseille ! En effet, entre plages de galets et de sable fin, petites criques et eau turquoise, cet écrin de biodiversité a tout d’une carte postale ! C’est l’endroit parfait pour prendre le soleil, explorer les fonds marins, ou encore s’adonner à quelques activités nautiques comme le kayak.">
+                <img src="" alt="des montagnes rocheuses pleine de verdure avec la mer en arrière plan">
                 <figcaption class="name">Parc National des Calanques</figcaption>
             </figure>
             <div>
