finalisation description alt activités

--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
             </figure>
             <div>
                 <figure class="activitesbox" id="activitesbox5">
-                    <img src="" alt="Figure emblématique de la Ville de Marseille, elle veille sur les marins, les pêcheurs et tous les Marseillais. Lors de votre séjour dans la cité phocéenne, allez rendre visite à la « Bonne Mère » comme on la surnomme à Marseille, et admirez du haut de la colline, le panorama qui s’offre à vous. En effet, elle est visible des quatre coins de la ville et fait face à la mer Méditerranée de toute sa grandeur.">
+                    <img src="" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église">
                     <figcaption class="name">Notre-Dame-de-la-Garde</figcaption>
                 </figure>
                 <figure class="activitesbox" id="activitesbox6">
-                    <img src="" alt="L’un des trop rares espace vert du centre-ville, mais ce parc majestueux situé en plein cœur de Marseille ne laisse personne indifférent. Huit d’hectares d’espaces verts, des musées, une architecture somptueuse, le Palais Longchamp ne manque pas d’attrait, ni de charme. C’est d’ailleurs l’un des plus beaux monuments de Marseille.">
+                    <img src="" alt="un majestueux palais blanc avec une magnifique et imposante fontaine au centre">
                     <figcaption class="name">Parc Longchamp</figcaption>
                 </figure>
             </div>
