correction orthographe alt activites

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <h3>Activités à Marseille</h3>
         <div class="activites">
             <figure class="activitesbox" id="activitesbox1">
-                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateau avec un ville en arrière plan">
+                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan">
                 <figcaption class="name">Vieux Port</figcaption>
             </figure>
             <div id="activitescolumn2">
@@ -197,21 +197,21 @@
                     <figcaption class="name">Fort de Pomègues</figcaption>
                 </figure>
                 <figure class="activitesbox" id="activitesbox3">
-                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="paysage maritime avec au premier plan, une longue vue, au second plan la mer et une longue digue orange, ainsi qu'une ile rocailleuse en arrière plan">
+                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan">
                     <figcaption class="name">Iles du Frioul</figcaption>
                 </figure>
             </div>
             <figure class="activitesbox" id="activitesbox4">
-                <img src="" alt="des montagnes rocheuses pleine de verdure avec la mer en arrière plan">
+                <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan">
                 <figcaption class="name">Parc National des Calanques</figcaption>
             </figure>
             <div>
                 <figure class="activitesbox" id="activitesbox5">
-                    <img src="" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église">
+                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église">
                     <figcaption class="name">Notre-Dame-de-la-Garde</figcaption>
                 </figure>
                 <figure class="activitesbox" id="activitesbox6">
-                    <img src="" alt="un majestueux palais blanc avec une magnifique et imposante fontaine au centre">
+                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="un majestueux palais blanc avec une imposante fontaine au centre">
                     <figcaption class="name">Parc Longchamp</figcaption>
                 </figure>
             </div>
