création column 1 à 4 activites

--- a/index.html
+++ b/index.html
@@ -187,10 +187,12 @@
     <section>
         <h3>Activités à Marseille</h3>
         <div class="activites">
-            <figure class="activitesbox" id="activitesbox1">
-                <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan">
-                <figcaption class="name">Vieux Port</figcaption>
-            </figure>
+            <div id="activitescolumn1">
+                <figure class="activitesbox" id="activitesbox1">
+                    <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan">
+                    <figcaption class="name">Vieux Port</figcaption>
+                </figure>
+            </div>
             <div id="activitescolumn2">
                 <figure class="activitesbox" id="activitesbox2">
                     <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="une pente rocheuse beige avec un fort beige au sommet">
@@ -201,11 +203,13 @@
                     <figcaption class="name">Iles du Frioul</figcaption>
                 </figure>
             </div>
-            <figure class="activitesbox" id="activitesbox4">
-                <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan">
-                <figcaption class="name">Parc National des Calanques</figcaption>
-            </figure>
-            <div>
+            <div id="activitescolumn3">
+                <figure class="activitesbox" id="activitesbox4">
+                    <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan">
+                    <figcaption class="name">Parc National des Calanques</figcaption>
+                </figure>
+            </div>
+            <div id="activitescolumn4">
                 <figure class="activitesbox" id="activitesbox5">
                     <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église">
                     <figcaption class="name">Notre-Dame-de-la-Garde</figcaption>
