--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
                         <i class="fas fa-star grey"></i>
                     </div>
                 </a>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                    <h4>Hôtel du port</h4>
-                    <p>Nuit à partir de 52€</p>
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" itemprop="image">
+                    <h4 itemprop="name">Hôtel du port</h4>
+                    <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">52<meta itemprop="priceCurrency" content="EUR">€</span></p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -84,10 +85,11 @@
                         <i class="fas fa-star blue"></i>
                     </div>
                 </a>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
-                    <h4>Hôtel les mouettes</h4>
-                    <p>Nuit à partir de 76€</p>
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" itemprop="image">
+                    <h4 itemprop="name">Hôtel les mouettes</h4>
+                    <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                    <meta itemprop="unitCode" content="NIGHT"> Nuit à partir de <span itemprop="price">76<meta itemprop="priceCurrency" content="EUR">€</span></p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -96,10 +98,11 @@
                         <i class="fas fa-star grey"></i>
                     </div>
                 </a>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                    <h4>Hôtel de la mer</h4>
-                    <p>Nuit à partir de 46€</p>
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" itemprop="image">
+                    <h4 itemprop="name">Hôtel de la mer</h4>
+                    <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">46<meta itemprop="priceCurrency" content="EUR">€</span></p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -108,10 +111,11 @@
                         <i class="fas fa-star grey"></i>
                     </div>
                 </a>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                    <h4>Auberge Le Panier</h4>
-                    <p>Nuit à partir de 23€</p>
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" itemprop="image">
+                    <h4 itemprop="name">Auberge Le Panier</h4>
+                    <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">23<meta itemprop="priceCurrency" content="EUR">€</span></p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -120,10 +124,11 @@
                         <i class="fas fa-star grey"></i>
                     </div>
                 </a>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                    <h4>Hôtel chez Amina</h4>
-                    <p>Nuit à partir de 96€</p>
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" itemprop="image">
+                    <h4 itemprop="name">Hôtel chez Amina</h4>
+                    <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">96<meta itemprop="priceCurrency" content="EUR">€</span></p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -139,11 +144,12 @@
                     Les plus populaires
                     <i class="fas fa-chart-line"></i>
                 </h3>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" itemprop="image">
                     <div class="details">
-                        <h4>Hôtel Le soleil du matin</h4>
-                        <p>Nuit à partir de 128€</p>
+                        <h4 itemprop="name">Hôtel Le soleil du matin</h4>
+                        <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">128<meta itemprop="priceCurrency" content="EUR">€</span></p>
                         <div class="stars">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
@@ -153,11 +159,12 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" itemprop="image">
                     <div class="details">
-                        <h4>Au coeur de l'eau Chambres d'hôtes</h4>
-                        <p>Nuit à partir de 71€</p>
+                        <h4 itemprop="name">Au coeur de l'eau Chambres d'hôtes</h4>
+                        <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">71<meta itemprop="priceCurrency" content="EUR">€</span></p>
                         <div class="stars">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
@@ -167,11 +174,12 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="box-content">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" itemprop="image">
                     <div class="details">
-                        <h4>Hôtel Tout bleu et blanc</h4>
-                        <p>Nuit à partir de 68€</p>
+                        <h4 itemprop="name">Hôtel Tout bleu et blanc</h4>
+                        <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">68<meta itemprop="priceCurrency" content="EUR">€</span></p>
                         <div class="stars">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
@@ -188,33 +196,33 @@
             <div class="activites">
                 <div id="activitescolumn1">
                     <figure class="activitesbox" id="activitesbox1">
-                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan">
+                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan" itemprop="image">
                         <figcaption class="name">Vieux Port</figcaption>
                     </figure>
                 </div>
                 <div id="activitescolumn2">
                     <figure class="activitesbox" id="activitesbox2">
-                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="une pente rocheuse beige avec un fort beige au sommet">
+                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="une pente rocheuse beige avec un fort beige au sommet" itemprop="image">
                         <figcaption class="name">Fort de Pomègues</figcaption>
                     </figure>
                     <figure class="activitesbox" id="activitesbox3">
-                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan">
+                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan" itemprop="image">
                         <figcaption class="name">Iles du Frioul</figcaption>
                     </figure>
                 </div>
                 <div id="activitescolumn3">
                     <figure class="activitesbox" id="activitesbox4">
-                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan">
+                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan" itemprop="image">
                         <figcaption class="name">Parc National des Calanques</figcaption>
                     </figure>
                 </div>
                 <div id="activitescolumn4">
                     <figure class="activitesbox" id="activitesbox5">
-                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église">
+                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église" itemprop="image">
                         <figcaption class="name">Notre-Dame-de-la-Garde</figcaption>
                     </figure>
                     <figure class="activitesbox" id="activitesbox6">
-                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="un majestueux palais blanc avec une imposante fontaine au centre">
+                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="un majestueux palais blanc avec une imposante fontaine au centre" itemprop="image">
                         <figcaption class="name">Parc Longchamp</figcaption>
                     </figure>
                 </div>
