schema.org activites

--- a/index.html
+++ b/index.html
@@ -194,36 +194,37 @@
         <section>
             <h3>Activités à Marseille</h3>
             <div class="activites">
-                <div id="activitescolumn1">
+                <meta itemprop="audienceType" content="Cultural tourism"/>
+                <div id="activitescolumn1" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitesbox" id="activitesbox1">
                         <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan" itemprop="image">
-                        <figcaption class="name">Vieux Port</figcaption>
+                        <figcaption class="name" itemprop="name">Vieux Port</figcaption>
                     </figure>
                 </div>
-                <div id="activitescolumn2">
+                <div id="activitescolumn2" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitesbox" id="activitesbox2">
                         <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="une pente rocheuse beige avec un fort beige au sommet" itemprop="image">
-                        <figcaption class="name">Fort de Pomègues</figcaption>
+                        <figcaption class="name" itemprop="name">Fort de Pomègues</figcaption>
                     </figure>
                     <figure class="activitesbox" id="activitesbox3">
                         <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan" itemprop="image">
-                        <figcaption class="name">Iles du Frioul</figcaption>
+                        <figcaption class="name" itemprop="name">Iles du Frioul</figcaption>
                     </figure>
                 </div>
-                <div id="activitescolumn3">
+                <div id="activitescolumn3" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitesbox" id="activitesbox4">
                         <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan" itemprop="image">
-                        <figcaption class="name">Parc National des Calanques</figcaption>
+                        <figcaption class="name" itemprop="name">Parc National des Calanques</figcaption>
                     </figure>
                 </div>
-                <div id="activitescolumn4">
+                <div id="activitescolumn4" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitesbox" id="activitesbox5">
                         <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église" itemprop="image">
-                        <figcaption class="name">Notre-Dame-de-la-Garde</figcaption>
+                        <figcaption class="name" itemprop="name">Notre-Dame-de-la-Garde</figcaption>
                     </figure>
                     <figure class="activitesbox" id="activitesbox6">
                         <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="un majestueux palais blanc avec une imposante fontaine au centre" itemprop="image">
-                        <figcaption class="name">Parc Longchamp</figcaption>
+                        <figcaption class="name" itemprop="name">Parc Longchamp</figcaption>
                     </figure>
                 </div>
             </div>
