correction schema suite au validator, rajout des alt manquants

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="main">
         <header>
-            <img id="logo" src="images/logo/Reservia@3x.png" alt="logo">
+            <img id="logo" src="images/logo/Reservia@3x.png" alt="logo bleu Reservia">
             <nav class="liens">
                 <a href="#" id="button_01" class="buttons grey">Hébergements</a>
                 <a href="#" id="button_02" class="buttons grey">Activités</a>
@@ -60,7 +60,7 @@
             <div class="hebergements">
                 <h3>Hébergements à Marseille</h3>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" itemprop="image" alt="petite chambre avec un lit superposé">
                     <h4 itemprop="name">Auberge la Cannebière</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
                     <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">25<meta itemprop="priceCurrency" content="EUR">€</span></p>
@@ -73,7 +73,7 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" itemprop="image" alt="chambre d'hôtel aux murs gris avec 2 lits">
                     <h4 itemprop="name">Hôtel du port</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
                     <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">52<meta itemprop="priceCurrency" content="EUR">€</span></p>
@@ -86,7 +86,7 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" itemprop="image" alt="chambre d'hotel avec une grande penderie et un lit ">
                     <h4 itemprop="name">Hôtel les mouettes</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
                     <meta itemprop="unitCode" content="NIGHT"> Nuit à partir de <span itemprop="price">76<meta itemprop="priceCurrency" content="EUR">€</span></p>
@@ -99,7 +99,7 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" itemprop="image" alt="chambre d'hôtel lumineuse avec un lit pour deux personne et un tableau de paysage maritime">
                     <h4 itemprop="name">Hôtel de la mer</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
                     <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">46<meta itemprop="priceCurrency" content="EUR">€</span></p>
@@ -112,7 +112,7 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" itemprop="image" alt="dortoir d'auberge avec plusieurs lit superposés en bois de palette">
                     <h4 itemprop="name">Auberge Le Panier</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
                     <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">23<meta itemprop="priceCurrency" content="EUR">€</span></p>
@@ -125,7 +125,7 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" itemprop="image" alt="petite chambre d'hôtel lumineuse avec un lit, un bureau et une télévision">
                     <h4 itemprop="name">Hôtel chez Amina</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
                     <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">96<meta itemprop="priceCurrency" content="EUR">€</span></p>
@@ -145,7 +145,7 @@
                     <i class="fas fa-chart-line"></i>
                 </h3>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" itemprop="image" alt="chambre d'hôtel luxueuse aux mur vert pomme avec un grand lit et de grands miroirs sur le mur et au plafond">
                     <div class="details">
                         <h4 itemprop="name">Hôtel Le soleil du matin</h4>
                         <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
@@ -160,7 +160,7 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" itemprop="image" alt="grande chambre d'hôtel moderne et contemporaine">
                     <div class="details">
                         <h4 itemprop="name">Au coeur de l'eau Chambres d'hôtes</h4>
                         <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
@@ -175,7 +175,7 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" itemprop="image">
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" itemprop="image" alt="chambre d'hôtel avec un grand lit au centre">
                     <div class="details">
                         <h4 itemprop="name">Hôtel Tout bleu et blanc</h4>
                         <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
@@ -193,7 +193,7 @@
         </div>
         <section>
             <h3>Activités à Marseille</h3>
-            <div class="activites">
+            <div class="activites" itemtype="https://schema.org/TouristDestination" itemscope>
                 <meta itemprop="audienceType" content="Cultural tourism"/>
                 <div id="activitescolumn1" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitesbox" id="activitesbox1">
