--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Rechercher
                 </button>
             </div>
-            <div class="filtres">
+            <div class="filters">
                 <span>Filtres</span>
                 <ul>
                     <li><i class="fas fa-money-bill-wave"></i>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="content">
-            <div class="hebergements">
+            <div class="host">
                 <h3>Hébergements à Marseille</h3>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
                     <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" itemprop="image" alt="petite chambre avec un lit superposé">
@@ -139,7 +139,7 @@
                 </a>
                 <button type="button">Afficher plus</button>
             </div>
-            <div class="populaires">
+            <div class="popular">
                 <h3 class="title">
                     Les plus populaires
                     <i class="fas fa-chart-line"></i>
@@ -193,36 +193,36 @@
         </div>
         <section>
             <h3>Activités à Marseille</h3>
-            <div class="activites" itemtype="https://schema.org/TouristDestination" itemscope>
+            <div class="activities" itemtype="https://schema.org/TouristDestination" itemscope>
                 <meta itemprop="audienceType" content="Cultural tourism"/>
-                <div id="activitescolumn1" itemtype="https://schema.org/TouristDestination" itemscope>
-                    <figure class="activitesbox" id="activitesbox1">
+                <div id="activitiescolumn1" itemtype="https://schema.org/TouristDestination" itemscope>
+                    <figure class="activitiesbox" id="activitiesbox1">
                         <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan" itemprop="image">
                         <figcaption class="name" itemprop="name">Vieux Port</figcaption>
                     </figure>
                 </div>
-                <div id="activitescolumn2" itemtype="https://schema.org/TouristDestination" itemscope>
-                    <figure class="activitesbox" id="activitesbox2">
+                <div id="activitiescolumn2" itemtype="https://schema.org/TouristDestination" itemscope>
+                    <figure class="activitiesbox" id="activitiesbox2">
                         <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="une pente rocheuse beige avec un fort beige au sommet" itemprop="image">
                         <figcaption class="name" itemprop="name">Fort de Pomègues</figcaption>
                     </figure>
-                    <figure class="activitesbox" id="activitesbox3">
+                    <figure class="activitiesbox" id="activitiesbox3">
                         <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan" itemprop="image">
                         <figcaption class="name" itemprop="name">Iles du Frioul</figcaption>
                     </figure>
                 </div>
-                <div id="activitescolumn3" itemtype="https://schema.org/TouristDestination" itemscope>
-                    <figure class="activitesbox" id="activitesbox4">
+                <div id="activitiesscolumn3" itemtype="https://schema.org/TouristDestination" itemscope>
+                    <figure class="activitiesbox" id="activitiesbox4">
                         <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan" itemprop="image">
                         <figcaption class="name" itemprop="name">Parc National des Calanques</figcaption>
                     </figure>
                 </div>
-                <div id="activitescolumn4" itemtype="https://schema.org/TouristDestination" itemscope>
-                    <figure class="activitesbox" id="activitesbox5">
+                <div id="activitiescolumn4" itemtype="https://schema.org/TouristDestination" itemscope>
+                    <figure class="activitiesbox" id="activitiesbox5">
                         <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église" itemprop="image">
                         <figcaption class="name" itemprop="name">Notre-Dame-de-la-Garde</figcaption>
                     </figure>
-                    <figure class="activitesbox" id="activitesbox6">
+                    <figure class="activitiesbox" id="activitiesbox6">
                         <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="un majestueux palais blanc avec une imposante fontaine au centre" itemprop="image">
                         <figcaption class="name" itemprop="name">Parc Longchamp</figcaption>
                     </figure>
