--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <a href="#" id="button_03" class="buttons blue">S'inscrire</a>
             </nav>
         </header>
-        <div class="entete">
+        <div class="headerTitle">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <h2>En plein centre ville ou pleine nature</h2>
-            <div class="localisation">
+            <div class="location">
                 <span id="iconeloc">
                     <i class="fas fa-map-marker-alt"></i>
                 </span>
@@ -237,7 +237,7 @@
             <a href="#">Conditions générales de vente</a>
             <a href="#">Données et confidentialités</a>
         </div>
-        <div id="hebergements">
+        <div id="hosting">
             <h5>Nos hébergements</h5>
             <a href="#">Charte qualité</a>
             <a href="#">Soumettre votre hôtel</a>
